--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "myapp",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/analytics": "^17.1.0",
     "@react-native-firebase/app": "^17.1.0",
+    "@react-native-firebase/auth": "^17.1.0",
+    "@react-native-firebase/crashlytics": "^17.1.0",
+    "@react-native-firebase/perf": "^17.1.0",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
@@ -21,7 +23,9 @@
     "@types/react-native-snap-carousel": "^3.8.5",
     "expo": "~47.0.12",
     "expo-blur": "~12.0.1",
+    "expo-build-properties": "~0.4.1",
     "expo-checkbox": "~2.2.2",
+    "expo-dev-client": "~2.0.1",
     "expo-firebase-recaptcha": "~2.3.1",
     "expo-font": "~11.0.1",
     "expo-linear-gradient": "~12.0.1",
@@ -36,20 +40,20 @@
     "react-native": "0.70.5",
     "react-native-animatable": "^1.3.3",
     "react-native-dotenv": "^3.4.7",
+    "react-native-error-boundary": "^1.2.1",
     "react-native-heroicons": "^3.2.0",
     "react-native-maps": "1.3.2",
     "react-native-maps-directions": "^1.9.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-progress": "^5.0.0",
+    "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.7",
-    "react-native-webview": "11.23.1",
+    "react-native-webview": "^11.23.1",
     "react-redux": "^8.0.5",
-    "redux-persist": "^6.0.0",
-    "expo-build-properties": "~0.4.1",
-    "expo-dev-client": "~2.0.1"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
